; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_m0110.c_instant.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_m0110.c_instant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M0110_INSTANT = common dso_local global i32 0, align 4
@M0110_NULL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @instant to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @instant() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @M0110_INSTANT, align 4
  %3 = call i32 @m0110_send(i32 %2)
  %4 = call i64 (...) @m0110_recv()
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = load i64, i64* @M0110_NULL, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %0
  %9 = load i64, i64* %1, align 8
  %10 = call i32 @debug_hex(i64 %9)
  %11 = call i32 @debug(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %8, %0
  %13 = load i64, i64* %1, align 8
  ret i64 %13
}

declare dso_local i32 @m0110_send(i32) #1

declare dso_local i64 @m0110_recv(...) #1

declare dso_local i32 @debug_hex(i64) #1

declare dso_local i32 @debug(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
